<resources>
    <string name="app_name">Journal App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_title">Login</string>
    <string name="create_account_title">Create Account</string>
    <string name="post_title">Post Title</string>
    <string name="post_description">Post Description</string>
    <string name="posTtitle">Post Title..</string>
    <string name="submit_text">Submit</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
</resources>
